# crypto-benches

./: Cargo.toml  README.md  criterion.toml  make-md-report.sh  md-convert.sh  run.sh
benches/: k256.rs  libsecp256k1.rs  secp256k1.rs
bigint/: Cargo.toml  README.md
bigint/benches/: bigint.rs
bigint/tests/: bigint.rs
ciphers/: Cargo.toml  README.md
ciphers/benches/: README.md  aes.rs  des.rs
ciphers/tests/: aes.rs  des.rs
criterion/k256-sign/libsecp256k1/base/: estimates.json  sample.json  tukey.json
criterion/k256-sign/libsecp256k1/new/: benchmark.json
criterion/k256-sign/libsecp256k1/report/: index.md
criterion/k256-sign/report/: index.md
criterion/k256-sign/rust-crypto/base/: benchmark.json  tukey.json
criterion/k256-sign/rust-crypto/new/: estimates.json  sample.json
criterion/k256-sign/rust-crypto/report/: index.md
criterion/k256-sign/secp256k1/base/: benchmark.json  sample.json  tukey.json
criterion/k256-sign/secp256k1/new/: estimates.json
criterion/k256-sign/secp256k1/report/: index.md
criterion/k256-verify/libsecp256k1/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/k256-verify/libsecp256k1/report/: index.md
criterion/k256-verify/report/: index.md
criterion/k256-verify/rust-crypto (rec)/base/: estimates.json  sample.json
criterion/k256-verify/rust-crypto (rec)/new/: benchmark.json  tukey.json
criterion/k256-verify/rust-crypto (rec)/report/: index.md
criterion/k256-verify/rust-crypto/base/: sample.json
criterion/k256-verify/rust-crypto/new/: benchmark.json  estimates.json  tukey.json
criterion/k256-verify/rust-crypto/report/: index.md
criterion/k256-verify/secp256k1 (rec)/base/: estimates.json  tukey.json
criterion/k256-verify/secp256k1 (rec)/new/: benchmark.json  sample.json
criterion/k256-verify/secp256k1 (rec)/report/: index.md
criterion/k256-verify/secp256k1/base/: tukey.json
criterion/k256-verify/secp256k1/new/: benchmark.json  estimates.json  sample.json
criterion/k256-verify/secp256k1/report/: index.md
criterion/prove/ark_ec_vrf_ed25519/base/: benchmark.json  tukey.json
criterion/prove/ark_ec_vrf_ed25519/new/: estimates.json  sample.json
criterion/prove/ark_ec_vrf_ed25519/report/: index.md
criterion/prove/report/: index.md
criterion/prove/schnorrkel/base/: benchmark.json  tukey.json
criterion/prove/schnorrkel/new/: estimates.json  sample.json
criterion/prove/schnorrkel/report/: index.md
criterion/report/: index.md
criterion/reports/: index.md
criterion/reports/prove/: index.md
criterion/reports/prove/ark_ec_vrf_ed25519/: index.md
criterion/reports/prove/schnorrkel/: index.md
ecdsa/: Cargo.toml  README.md
ecdsa/benches/: k256.rs
ecdsa/tests/: k256.rs  secp256k1.rs
hash/: Cargo.toml  README.md
hash/benches/: blake2.rs  blake3.rs  sha256.rs
hash/tests/: blake2.rs
misc/: Cargo.toml  README.md
misc/benches/: base58.rs  base64.rs  te_sw_map.rs
report/prove/ark-ec-vrf-bandersnatch-blake2-ed/base/: benchmark.json  sample.json  tukey.json
report/prove/ark-ec-vrf-bandersnatch-blake2-ed/change/: estimates.json
report/prove/ark-ec-vrf-bandersnatch-blake2-ed/new/: estimates.json  tukey.json
report/prove/ark-ec-vrf-bandersnatch-blake2-ed/report/: index.html  index.md
report/prove/ark-ec-vrf-bandersnatch-sha512-ed/base/: benchmark.json  estimates.json  sample.json  tukey.json
report/prove/ark-ec-vrf-bandersnatch-sha512-ed/change/: estimates.json
report/prove/ark-ec-vrf-bandersnatch-sha512-ed/new/: estimates.json  sample.json  tukey.json
report/prove/ark-ec-vrf-bandersnatch-sha512-ed/report/: index.html  index.md
report/prove/ark-ec-vrf-bandersnatch-sha512-ws/base/: benchmark.json  estimates.json
report/prove/ark-ec-vrf-bandersnatch-sha512-ws/change/: estimates.json
report/prove/ark-ec-vrf-bandersnatch-sha512-ws/new/: sample.json  tukey.json
report/prove/ark-ec-vrf-bandersnatch-sha512-ws/report/: index.html  index.md
report/prove/ark_ec_vrf_ed25519/base/: estimates.json  sample.json  tukey.json
report/prove/ark_ec_vrf_ed25519/change/: estimates.json
report/prove/ark_ec_vrf_ed25519/new/: estimates.json  sample.json  tukey.json
report/prove/ark_ec_vrf_ed25519/report/: index.html  index.md
report/prove/bandersnatch-vrfs/base/: sample.json  tukey.json
report/prove/bandersnatch-vrfs/change/: estimates.json
report/prove/bandersnatch-vrfs/new/: benchmark.json  estimates.json  sample.json  tukey.json
report/prove/bandersnatch-vrfs/report/: index.html  index.md
report/prove/report/: index.html  index.md
report/prove/schnorrkel/base/: estimates.json  sample.json  tukey.json
report/prove/schnorrkel/change/: estimates.json
report/prove/schnorrkel/new/: estimates.json  sample.json  tukey.json
report/prove/schnorrkel/report/: index.html  index.md
report/report/: index.html  index.md
report/verify/ark-ec-vrf-bandersnatch-blake2b-ed/base/: sample.json  tukey.json
report/verify/ark-ec-vrf-bandersnatch-blake2b-ed/change/: estimates.json
report/verify/ark-ec-vrf-bandersnatch-blake2b-ed/new/: benchmark.json  estimates.json
report/verify/ark-ec-vrf-bandersnatch-blake2b-ed/report/: index.html  index.md
report/verify/ark-ec-vrf_bandersnatch-sha512-ed/base/: sample.json  tukey.json
report/verify/ark-ec-vrf_bandersnatch-sha512-ed/change/: estimates.json
report/verify/ark-ec-vrf_bandersnatch-sha512-ed/new/: benchmark.json  estimates.json  tukey.json
report/verify/ark-ec-vrf_bandersnatch-sha512-ed/report/: index.html  index.md
report/verify/report/: index.html  index.md
rsa/: Cargo.toml  README.md
rsa/benches/: rsa.rs
rsa/tests/: rsa.rs
tests/: k256.rs  libsecp256k1.rs
utils/: Cargo.toml
utils/src/: lib.rs
vrf/: Cargo.toml  README.md
vrf/benches/: ring-vrfs.rs  vrfs.rs
vrf/tests/: ring-vrfs.rs  vrfs.rs
vrfs/: Cargo.toml  README.md
vrfs/benches/: ring-vrfs.rs
vrfs/tests/: ring-vrfs.rs
(+39 files in other folders)
