[package]
name = "crypto-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

rand = "0.8.4"
secp256k1 = { version = "0.21.2", features = ["bitcoin_hashes", "rand-std"] }

k256 = { version = "0.10.2", features = ["ecdsa"] }
sha2 = "0.10.1"
ecdsa = "0.13.4"

libsecp256k1 = "0.7.0"

[[bench]]
name = "secp256k1"
harness = false

[[bench]]
name = "k256"
harness = false

[[bench]]
name = "libsecp256k1"
harness = false