[workspace]
resolver = "2"
members = [
    "utils",
    "misc",
    "bigint",
    "rsa",
    "ciphers",
    "ecdsa",
    "hash",
    "vrf",
]

# [patch."http://github.com/davxy/ark-ec-vrfs"]
# ark-ec-vrfs = { path = "/home/davxy/develop/personal/ark-ec-vrfs" }

# [patch."https://github.com/davxy/ring-proof"]
# ring = { path = "/mnt/ssd/develop/w3f/ring-proof/ring" }
