[package]
name = "ciphers"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3.6"
utils = { path = "../utils" }

# CRY
cry-rs = { git = "https://github.com/davxy/cry-rs" }

# RustCrypto
aes = "0.8.1"
des = "0.8.1"

[[bench]]
name = "aes"
harness = false

[[bench]]
name = "des"
harness = false
