[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
utils = { path = "../utils" }
criterion = "0.3"
rand = "0.8.4"
sha2 = "0.10.1"

secp256k1 = { version = "0.21.2", features = ["bitcoin_hashes", "rand-std"] }

k256 = { version = "0.10.2", features = ["ecdsa"] }
ecdsa = "0.13.4"

libsecp256k1 = "0.7.0"

[[bench]]
name = "k256"
harness = false