[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
utils = { path = "../utils" }
criterion = "0.3.6"
rand = "0.8.5"
sha2 = "0.10.2"

secp256k1 = { version = "0.24.0", features = ["bitcoin_hashes", "rand-std", "recovery"] }

k256 = { version = "0.13.0", features = ["ecdsa"] }
ecdsa = "0.14.4"

libsecp256k1 = "0.7.1"

[[bench]]
name = "k256"
harness = false
