[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
utils = { path = "../utils" }
criterion = "0.5.1"
rand = "0.8.5"
sha2 = "0.10.8"

secp256k1 = { version = "0.28.2", features = ["rand-std", "recovery"] }

k256 = { version = "0.13.3", features = ["ecdsa"] }
ecdsa = "0.16.9"

libsecp256k1 = "0.7.1"

[[bench]]
name = "k256"
harness = false
