[package]
name = "hash"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3.6"
utils = { path = "../utils" }
sha2 = "0.10.2"
ring = "0.16.20"
blake2-rfc = "0.2.18"
blake2 = "0.10.4"
cry-rs = { git = "https://github.com/davxy/cry-rs" }
blake3 = "1.3.3"

[[bench]]
name = "sha256"
harness = false

[[bench]]
name = "blake2"
harness = false

[[bench]]
name = "blake3"
harness = false
