[package]
name = "misc"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-ff = { version = "0.4.2", features = ["parallel"] }
ark-std = { version = "0.4.0", features = ["parallel"] }
base58 = "0.2.0"
bs58 = "0.5.0"
rand_core = "0.6.4"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"
utils = { path = "../utils" }
cry-rs = { git = "https://github.com/davxy/cry-rs" }
base64 = "0.21.7"

[[bench]]
name = "base64"
harness = false

[[bench]]
name = "base58"
harness = false

[[bench]]
name = "te_sw_map"
harness = false
