[package]
name = "vrf"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
utils = { path = "../utils" }
criterion = "0.5.1"
rand = "0.8.5"
blake2 = "0.10.6"
merlin = "3.0.0"
schnorrkel = "0.11.4"
bandersnatch_vrfs = { git = "https://github.com/davxy/ring-vrf", branch = "pending-approval", features = ["parallel"] }
ark-ec-vrfs = { git = "https://github.com/davxy/ark-ec-vrfs", rev="979702d", features =["full","parallel"] }
ark-std = "0.5.0"
ark-ed-on-bls12-381-bandersnatch = "0.5.0"

[[bench]]
name = "vrfs"
harness = false

[[bench]]
name = "ring-vrfs"
harness = false
